fix: adjust layout and spacing in CSS, update HTML for consistency in prediction logic

--- a/Diabetes_prediction_deployed/static/css/style.css
+++ b/Diabetes_prediction_deployed/static/css/style.css
@@ -23,13 +23,14 @@ body {
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 /* Contenedor principal */
 .container {
     max-width: 600px;
     margin: 0 auto;
+    margin-bottom: 40px;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
@@ -52,6 +53,7 @@ h1 {
         transform: scale(0.95);
         opacity: 0.9;
     }
+
     100% {
         transform: scale(1);
         opacity: 1;
@@ -147,6 +149,7 @@ footer {
     h1 {
         font-size: 1.8rem;
     }
+
     .form-input {
         padding: 12px;
         font-size: 0.9rem;
